@startuml

title __ADAPTER's Class Diagram__\n

  namespace com.xiaoma {
    namespace adapter {
      interface com.xiaoma.adapter.Call {
          {abstract} + enqueque()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace adapter {
      interface com.xiaoma.adapter.CallAdapter {
          {abstract} + adapt()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace adapter {
      abstract class com.xiaoma.adapter.CallAdapter.Factory {
          {abstract} + get()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace adapter {
      class com.xiaoma.adapter.ExecutorCallAdapterFactory {
          + get()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace adapter {
      class com.xiaoma.adapter.ExecutorCallAdapterFactory.ExcutorCallBackCall {
          + enqueque()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace adapter {
      class com.xiaoma.adapter.OkhttpCall {
          + enqueque()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace adapter {
      class com.xiaoma.adapter.Retrofit {
          + create()
          + getCallAdapter()
          - Retrofit()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace adapter {
      class com.xiaoma.adapter.Retrofit.Builder {
          + addCallAdapterFactroy()
          + build()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace adapter {
      class com.xiaoma.adapter.ServerMethod {
          - callAdapter : CallAdapter<R, T>
          + ServerMethod()
          ~ adapt()
      }
    }
  }
  

  namespace com.xiaoma {
    namespace adapter {
      class com.xiaoma.adapter.ServerMethod.Builder {
          - callAdapter : CallAdapter<R, T>
          + Builder()
          + build()
          - createCallAdapter()
      }
    }
  }
  

  com.xiaoma.adapter.CallAdapter +-down- com.xiaoma.adapter.CallAdapter.Factory
  com.xiaoma.adapter.ExecutorCallAdapterFactory -up-|> com.xiaoma.adapter.CallAdapter.Factory
  com.xiaoma.adapter.ExecutorCallAdapterFactory +-down- com.xiaoma.adapter.ExecutorCallAdapterFactory.ExcutorCallBackCall
  com.xiaoma.adapter.ExecutorCallAdapterFactory.ExcutorCallBackCall .up.|> com.xiaoma.adapter.Call
  com.xiaoma.adapter.OkhttpCall .up.|> com.xiaoma.adapter.Call
  com.xiaoma.adapter.Retrofit o-- com.xiaoma.adapter.CallAdapter.Factory : factory
  com.xiaoma.adapter.Retrofit +-down- com.xiaoma.adapter.Retrofit.Builder
  com.xiaoma.adapter.Retrofit.Builder o-- com.xiaoma.adapter.CallAdapter.Factory : factory
  com.xiaoma.adapter.ServerMethod +-down- com.xiaoma.adapter.ServerMethod.Builder
  com.xiaoma.adapter.ServerMethod.Builder o-- com.xiaoma.adapter.Retrofit : retrofit


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
